--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Git Tutorial</title>
   </head>
   <body>
-
+    <h1>Header</h1>
   
 
     <script type="text/javascript" src="script.js">
